--- a/css/help.css
+++ b/css/help.css
@@ -2,9 +2,17 @@ body {
   background-color: #fcf0f0;
   height: 100%;
 }
+.navbar{
+  background-color: #D4CACA
+}
 .faq {
+  width: 60%;
+  box-shadow: 0px 3px 8px grey;
 
 }
 .contact {
 
+}
+span{
+  font-weight: bold;
 }
