--- a/css/help.css
+++ b/css/help.css
@@ -1,18 +1,34 @@
 body {
   background-color: #fcf0f0;
-  height: 100%;
+ 
+    font-family: Merriweather;
+    font-size: 24px;
 }
 .navbar{
   background-color: #D4CACA
 }
+.box{
+  gap: 140px;
+}
 .faq {
-  width: 60%;
+  width: 60%; 
+  padding-bottom: 3%;  
   box-shadow: 0px 3px 8px grey;
 
 }
 .contact {
-
+  border: 1px solid #CA3A28;
+  padding-left: 15%;
+  padding-right: 15%;
 }
 span{
   font-weight: bold;
+}
+input{
+  background: transparent;
+  border: 1px solid #CA3A28;
+  margin-bottom: 10px;  
+}
+.btn{
+  background: #CA3A28;   
 }
