--- a/css/home.css
+++ b/css/home.css
@@ -34,4 +34,18 @@ body{
     border: #CA3A28 2px solid;
     border-radius: 30px;
 }
-
+.btn{
+    color: #FCF0F0;    
+    background-color: #CA3A28 ;
+    padding-left: 7%;
+    border-radius: 30px;
+}
+.card a:hover{
+    transition: 0.6s ease;
+    transform: scale(1.1);
+}
+.card{
+    background-color: #FCF0F0;
+    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.5);
+    text-align: center;
+}
