--- a/css/home.css
+++ b/css/home.css
@@ -5,6 +5,7 @@
 }
 body{
     background-color: #FCF0F0;
+    font-family: 'Merriweather', serif;
 }
 .navbar{
     background-color: rgba(0, 0, 0, 0.2);
@@ -49,3 +50,8 @@ body{
     box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.5);
     text-align: center;
 }
+/* .details{
+    background-color: #CA3A28;
+    
+} */
+
