--- a/css/home.css
+++ b/css/home.css
@@ -50,8 +50,16 @@ body{
     box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.5);
     text-align: center;
 }
-/* .details{
+.details{
+    padding: 5%;
+    text-align: center;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 60%;
+    height: 75%;
     background-color: #CA3A28;
-    
-} */
+    overflow-y: scroll;
+}
 
