--- a/css/home.css
+++ b/css/home.css
@@ -40,6 +40,7 @@ body{
     background-color: #CA3A28 ;
     padding-left: 7%;
     border-radius: 30px;
+    
 }
 .card a:hover{
     transition: 0.6s ease;
@@ -61,6 +62,13 @@ body{
     height: 75%;
     background-color: #CA3A28;
     overflow-y: scroll;
+    display: none;
+}
+.not-found{
+    text-align: center;
+    margin: 10%;
+    font-size: x-large;
+    color: #CA3A28;
     display: none;
 }
 
