--- a/css/profile.css
+++ b/css/profile.css
@@ -32,3 +32,10 @@
     border-color: black;
     width: 170px; 
 }
+img{
+    max-width:180px;
+  }
+  input[type=file]{
+  padding:10px;
+  /* background:#2d2d2d; */
+}
